Feature/set up swagger (#3)
added swagger to project, JWT auth configured